--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,3 +1,5 @@
+<% var category = (locals.category) ? locals.category : null; %>
+
 <footer>
     <div class="f-info">
         <div class="f-info-socials">
@@ -6,7 +8,7 @@
             <i class="fa-brands fa-linkedin"></i>
         </div>
 
-        <div class="f-info-brand"> &copy;WanderLust Private Limited</div>
+        <div class="f-info-brand"> &copy;StaySphere Private Limited</div>
 
         <div class="f-info-links">
             <a href="/privacy">Privacy</a>
