--- a/views/includes/flash.ejs
+++ b/views/includes/flash.ejs
@@ -1,4 +1,4 @@
-<% if(success && success.length){ %>
+<% if(typeof success !== 'undefined' && success && success.length){ %>
     <div class="alert alert-success alert-dismissible fade show" role="alert">
         <%= success %>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -6,14 +6,14 @@
 <% } %>
 
 
-<% if(failure && failure.length){ %>
+<% if(typeof failure !== 'undefined' && failure && failure.length){ %>
     <div class="alert alert-danger alert-dismissible fade show" role="alert">
         <%= failure %>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 <% } %>
 
-<% if(update && update.length){ %>
+<% if(typeof update !== 'undefined' && update && update.length){ %>
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
         <%= update %>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
