--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -4,7 +4,12 @@
 
     <div class="row">
         <div class="col-8 offset-2">
-            <h3>Edit Listing</h3>
+            <div class="d-flex justify-content-between align-items-center mb-3">
+                <h3>Edit Listing</h3>
+                <a href="/listings" class="btn btn-outline-primary">
+                    <i class="fa-solid fa-list me-2"></i>Show All Listings
+                </a>
+            </div>
             
             <form action="/listings/<%= listing._id %>?_method=PATCH" method="post" novalidate class="needs-validation" enctype="multipart/form-data">
                 <div class="mb-3">
