--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -2,8 +2,10 @@
 
 <div class="row mt-3">
 
-    <h1 class="col-6 offset-3">Login on WanderLust</h1>
     <div class="col-6 offset-3">
+        <div class="d-flex justify-content-between align-items-center mb-3">
+            <h1>Login on StaySphere</h1>
+        </div>
 
         <form action="/login" method="post" class="needs-validation" novalidate>
 
