--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -2,8 +2,10 @@
 
 <div class="row mt-3">
 
-    <h1 class="col-6 offset-3">SignUp on WanderLust</h1>
     <div class="col-6 offset-3">
+        <div class="d-flex justify-content-between align-items-center mb-3">
+            <h1>SignUp on StaySphere</h1>
+        </div>
 
         <form action="/signup" method="post" class="needs-validation" novalidate>
 
